--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dark-room",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,15 @@
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
     "uuid": "^8.1.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/reuben-rotich/gallery.git"
+  },
+  "bugs": {
+    "url": "https://github.com/reuben-rotich/gallery/issues"
+  },
+  "homepage": "https://github.com/reuben-rotich/gallery#readme",
+  "description": ""
 }
