--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo testing ....",
     "start": "node server.js"
   },
   "keywords": [],
@@ -18,7 +18,11 @@
     "multer": "^1.4.2",
     "uuid": "^8.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "chai-http": "^1.0.0",
+    "mocha": "^8.1.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reuben-rotich/gallery.git"
